# Aleksey_Kharitonov_coursework_6

./: README.md  env.sample  pyproject.toml
blogpost/: forms.py  models.py  services.py  urls.py  views.py
blogpost/migrations/: 0001_initial.py
blogpost/templates/blogpost/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
config/: settings.py  urls.py
main_app/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
main_app/management/commands/: newsletter.py
main_app/migrations/: 0001_initial.py  0002_initial.py
main_app/templates/main_app/: bar.html  base.html  client_confirm_delete.html  client_detail.html  client_list.html  home.html  mailinglog_list.html  mailingmessage_confirm_delete.html  mailingmessage_detail.html  mailingmessage_form.html  mailingmessage_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  personal_area.html
main_app/templatetags/: my_tag.py
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py  moderate.py
users/migrations/: 0001_initial.py
users/templates/users/: confirm_register.html  error_register.html  login.html  register.html  register_message.html  user_confirm_delete.html  user_form.html  user_list.html  user_password_reset.html  user_password_set_new.html  user_profile.html
